<resources>
    <string name="app_name">Pedal Plates</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name_bold">PEDAL\nPLATES</string>
    <string name="developer_message">Developed with ❤️ by code.Moriarity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an Account? Register</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_registered_mobile_number_and_email_address">Enter your registered mobile number and email address</string>
    <string name="enter_the_otp_received_on_your_email_id_and_reset_password">Enter the OTP received on your email id and reset password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="deliver_address">Deliver Address</string>
    <string name="submit">Submit</string>
    <string name="preference_file_name">Profile Preference</string>
    <string name="home">Home</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="profile_name">Profile Name</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="product_name">product_name</string>
    <string name="product_cost">product_cost</string>
    <string name="sort_action">Sort Action</string>
    <string name="remove">Remove</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="restaurant_name">restaurant_name</string>
    <string name="cost_per_person">cost_per_person</string>
    <string name="_0_0">0.0</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="bill_no">Bill No</string>
    <string name="total_bill">Total Bill*</string>
    <string name="additional_charges_included_rs_150_delivery_charges">*Additional charges included(Rs. 150/- Delivery Charge)</string>
    <string name="continue_to_verify_address_details">Continue to verify Address details</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed">Your Order has been successfully placed !!</string>
    <string name="ooh_la_la">Ooh-La-La !!</string>
    <string name="success">Success</string>
    <string name="order_confirm">Your order will never reach you.\nSit back at home and cook for Yourself.\nKeep Rs. 0000 ready for smooth payment</string>
    <string name="thank_you_for_ordering_through_pedal_plates">Thank You for ordering through Pedal-Plates</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="order_date">order_date</string>
    <string name="exit">Exit</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="questions">Questions ?</string>
    <string name="you_know_we_are_not_gonna_answer">You know, We are not gonna answer.</string>
    <string name="thank_you">Thank You</string>
    <string name="logo">logo</string>
</resources>
