<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.moriarity_code.pedalplates.activity.HomeActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_round_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/menuFavRes"
            android:icon="@drawable/ic_round_favorite_24"
            android:title="@string/favourite_restaurants" />
        <item
            android:id="@+id/menuOrderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/menuFAQs"
            android:icon="@drawable/ic_faq"
            android:title="@string/faqs" />
        <item
            android:id="@+id/menuLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
