<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_white" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/rosemary"
        android:gravity="center"
        android:text="@string/enter_your_registered_mobile_number_and_email_address"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/txtLogin"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp">

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/cooljazz"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/cvMobileNumber"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp">

        <EditText
            android:id="@+id/etEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/cooljazz"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/cvPassword"
        android:layout_margin="10dp"
        android:background="@color/primaryDarkColor"
        app:cardCornerRadius="50dp">

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryDarkColor"
            android:fontFamily="@font/rosemary"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="#fafafa"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>