<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvSingleElement"
    android:layout_width="180dp"
    android:layout_height="230dp"
    app:cardBackgroundColor="#fafafa"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        android:weightSum="7">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imgRestaurantImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Restaurant Images"
                android:src="@drawable/ic_food" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/rosemary"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/restaurant_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtCostPerPerson"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/rosemary"
            android:gravity="center"
            android:textColor="#084D00"
            android:text="@string/cost_per_person"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imgFavourite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_favourite_empty" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/rosemary"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>